--- a/requirements_GUI.txt
+++ b/requirements_GUI.txt
@@ -1,11 +1,14 @@
+beautifulsoup4==4.11.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
 dnspython==2.2.1
 idna==3.4
+lxml==4.9.2
 neo4j==5.3.0
 Pillow==9.3.0
 pymongo==4.3.3
 PySimpleGUI==4.60.4
 pytz==2022.7
 requests==2.28.1
+soupsieve==2.4
 urllib3==1.26.13
