--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,22 @@
-beautifulsoup4==4.11.2
+beautifulsoup4==4.12.2
 certifi==2022.12.7
 cffi==1.15.1
-### para core20
-charset-normalizer==2.1.1
-neo4j==5.3.0
-numpy==1.24.2
-pandas==1.5.3
-Pillow==9.3.0
-pymongo==4.3.3
-requests==2.28.1
-soupsieve==2.4
-
-### para core18
-# charset-normalizer~=2.0.0
-# neo4j==4.4.10
-# numpy==1.19.5
-# pandas==1.1.5
-# Pillow==8.4.0
-# pymongo==4.1.1
-# requests==2.27.1
-# soupsieve==2.3.2
-
-cryptography==39.0.2
-dnspython==2.2.1
+charset-normalizer==3.1.0
+cryptography==40.0.2
+dnspython==2.3.0
 idna==3.4
 lxml==4.9.2
+neo4j==5.8.0
+numpy==1.24.3
+pandas==2.0.1
+Pillow==9.5.0
 pycparser==2.21
+pymongo==4.3.3
 PySimpleGUI==4.60.4
 python-dateutil==2.8.2
-pytz==2022.7
+pytz==2023.3
+requests==2.29.0
 six==1.16.0
-tk==0.1.0
-urllib3==1.26.13
+soupsieve==2.4.1
+tzdata==2023.3
+urllib3==1.26.15
