--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-beautifulsoup4==4.12.2
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 cryptography==40.0.2
-dnspython==2.3.0
-idna==3.4
-lxml==4.9.2
-neo4j==5.8.0
-numpy==1.24.3
-pandas==2.0.1
-Pillow==9.5.0
-pycparser==2.21
-pymongo==4.3.3
-PySimpleGUI==4.60.4
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.29.0
-six==1.16.0
-soupsieve==2.4.1
-tzdata==2023.3
-urllib3==1.26.15
+dnspython==2.7.0
+idna==3.10
+lxml==5.3.1
+neo4j==5.28.1
+numpy==2.2.3
+pandas==2.2.3
+pillow==11.1.0
+pycparser==2.22
+pymongo==4.11.1
+PySimpleGUI==4.60.5.0
+python-dateutil==2.9.0.post0
+pytz==2025.1
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
