--- a/v2/src/.env
+++ b/v2/src/.env
@@ -1,17 +1,30 @@
-HEADERS="{'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:15.0) Gecko/20100101 Firefox/15.0.1'}"
-URL_GOOGLE="https://www.google.com/"
+### SQLite
+DB_INIT="['CREATE TABLE IF NOT EXISTS user(id INTEGER PRIMARY KEY, name VARCHAR(128))',
+'CREATE TABLE IF NOT EXISTS author(id INTEGER PRIMARY KEY, name VARCHAR(128))',
+'CREATE TABLE IF NOT EXISTS publisher(id INTEGER PRIMARY KEY, name VARCHAR(255))',
+'CREATE TABLE IF NOT EXISTS genre(id INTEGER PRIMARY KEY, name VARCHAR(128))',
+'CREATE TABLE IF NOT EXISTS book(id INTEGER PRIMARY KEY, title VARCHAR(255), subtitle VARCHAR(255), author INTEGER, publisher INTEGER, publication_date VARCHAR(10), isbn_10 VARCHAR(20), isbn_13 VARCHAR(20), pages INTEGER, description TEXT, cover TEXT, genre VARCHAR(128), FOREIGN KEY (author) REFERENCES author(id), FOREIGN KEY (publisher) REFERENCES publisher(id)), FOREIGN KEY (genre) REFERENCES genre(id))',
+'CREATE TABLE IF NOT EXISTS store(id INTEGER PRIMARY KEY, name VARCHAR(255), website VARCHAR(255))',
+'CREATE TABLE IF NOT EXISTS bookcase(id INTEGER PRIMARY KEY, user INTEGER, book INTEGER, store INTEGER, price VARCHAR(20), rating VARCHAR(20), url VARCHAR(255), my_collection VARCHAR(20), acquired CHAR(1), FOREIGN KEY (user) REFERENCES user(id), FOREIGN KEY (book) REFERENCES book(id), FOREIGN KEY (store) REFERENCES store(id))']"
+DDL=""
+DML="{'insert_user':'INSERT INTO user(name) VALUES(?)'}"
+DQL="{'select_user_by_name':'SELECT * FROM user WHERE name=?',
+'select_user_by_id':'SELECT * FROM user WHERE id=?',
+'select_bookcase_by_id':'SELECT ROW_NUMBER() OVER(ORDER BY acquired, price, my_collection) id, bookcase.my_collection, book.title, book.author, bookcase.acquired FROM bookcase JOIN (SELECT book.id, book.title, author.name author FROM book JOIN author ON book.author = author.id) book ON bookcase.book = book.id WHERE user=?'
+}"
 
 ### Window
 NAME="Livretum"
 THEME="DarkGrey11"
 LINUX_SCREEN='xrandr | grep "current" | cut -d "," -f2 | cut -d " " -f3;xrandr | grep "current" | cut -d "," -f2 | cut -d " " -f5'
 WINDOWS_SCREEN='wmic path Win32_VideoController get CurrentHorizontalResolution;wmic path Win32_VideoController get CurrentVerticalResolution'
+BOOKCASE_COLUMNS="[' id ', ' coleção ', 'título', 'autor(es)', 'Adquirido?']"
 
 ### Files
 LOGO="src/utils/assets/Livretum.png"
 WINDOWS_ICON="src/utils/assets/icons/livretum.ico"
 LINUX_ICON="src/utils/assets/icons/livretum.png"
-DEFAULT_DIR="%s/.livretum/"
+DEFAULT_DIR="%s/.livretum"
 
 ### Variables
 SEPARATOR=";"
