add 'key' in env 'DML'

--- a/v2/src/.env
+++ b/v2/src/.env
@@ -7,7 +7,9 @@ DB_INIT="['CREATE TABLE IF NOT EXISTS user(id INTEGER PRIMARY KEY, name VARCHAR(
 'CREATE TABLE IF NOT EXISTS store(id INTEGER PRIMARY KEY, name VARCHAR(255), website VARCHAR(255))',
 'CREATE TABLE IF NOT EXISTS bookcase(id INTEGER PRIMARY KEY, user INTEGER, book INTEGER, store INTEGER, price VARCHAR(20), rating VARCHAR(20), url VARCHAR(255), my_collection VARCHAR(20), acquired CHAR(1), FOREIGN KEY (user) REFERENCES user(id), FOREIGN KEY (book) REFERENCES book(id), FOREIGN KEY (store) REFERENCES store(id))']"
 DDL=""
-DML="{'insert_user':'INSERT INTO user(name) VALUES(?)'}"
+DML="{'insert_user':'INSERT INTO user(name) VALUES(?)',
+'update_acquired':'UPDATE bookcase SET acquired=? WHERE book=(SELECT id FROM book WHERE title=? AND author=(SELECT id FROM author WHERE name=?)) AND user=?'
+}"
 DQL="{'select_user_by_name':'SELECT * FROM user WHERE name=?',
 'select_user_by_id':'SELECT * FROM user WHERE id=?',
 'select_bookcase_by_id':'SELECT ROW_NUMBER() OVER(ORDER BY acquired, price, my_collection) id, bookcase.my_collection, book.title, book.author, bookcase.acquired FROM bookcase JOIN (SELECT book.id, book.title, author.name author FROM book JOIN author ON book.author = author.id) book ON bookcase.book = book.id WHERE user=?'
