add 'new assets path' and 'endpoint api books'

--- a/v2/src/.env
+++ b/v2/src/.env
@@ -26,10 +26,15 @@ LOGO="src/utils/assets/Livretum.png"
 WINDOWS_ICON="src/utils/assets/icons/livretum.ico"
 LINUX_ICON="src/utils/assets/icons/livretum.png"
 DEFAULT_DIR="%s/.livretum"
+NO_IMAGE="src/utils/assets/noimage.png"
+JPEG_IMAGE="%s/book.jpeg"
+PNG_IMAGE="%s/book.png"
 
 ### Variables
+COMMA=","
 SEPARATOR=";"
 NEWLINE="\n"
 URL_GOOGLE="https://www.google.com/"
 DEFAULT_FONT="Courier"
 DEFAULT_JUSTIFICATION="center"
+API_GOOGLE_BOOKS="https://www.googleapis.com/books/v1/volumes?fields=items(selfLink,volumeInfo(title,subtitle,authors,imageLinks,industryIdentifiers))&q=%s&maxResults=15&printType=books"
